# N64cart

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  build-release.sh  cic.c  cic_test.pio  indentsrc.sh  main.c  n64.h  n64_pi.pio
case/: n64cart-back.stl  n64cart-front.stl  n64cart-misc.stl
fw/: CMakeLists.txt  cic.c  flash_swd.sh  flashrom.c  flashrom.h  main.c  main.h  n64.h  n64_cic.c  n64_pi.c  n64_pi.h  n64_pi.pio  n64_si.c  n64_si.h  rgb_led.c  rgb_led.h
fw/board/: n64cart-pico-lite.h  n64cart-pico.h  n64cart-v2.h  n64cart-v3.h  n64cart.h  pico-sdk-mx66l.patch
fw/board-v3/: boot2_mx66l.S  n64cart.h
fw/romfs/: Makefile  README.md  main.c  newlib-romfs.c  newlib-romfs.h  romfs.c  romfs.h  test.c  test.sh
fw/usb/: crc32.c  dev_lowlevel.c  dev_lowlevel.h  usb_common.h  usbd.h
hw/: n64cart-1G.brd  n64cart-1G.sch  n64cart-v2-soic-8.brd  n64cart-v2-soic-8.sch  n64cart-v3-soic-16-usbc.brd  n64cart-v3-soic-16-usbc.sch  n64cart-v3-soic-16.brd  n64cart-v3-soic-16.sch  n64cart.brd  n64cart.sch  pcbway-milling-9.2.2.cam
rom/: CMakeLists.txt  Makefile  libdragon-draw-character-clipping.patch  main.c  main.h  n64cart.c  n64cart.h  syslog.c  syslog.h
rom/CMake/: toolchain.libdragon.cmake
rom/assets/: ttf-convert-to-bmp.sh
rom/cmake/: toolchain.libdragon.cmake  toolchain.mips64-elf.cmake
rom/ext/: boot.c  boot_io.h  reboot.S  rom_defs.h  shell_utils.c  shell_utils.h
rom/src/: imgviewer.c  imgviewer.h  main.c  md5.c  md5.h  n64cart.c  n64cart.h  syslog.h
rom/src/ext/: boot.h  crc32.h  rom_defs.h  shell_utils.c  shell_utils.h
rom/src/usb/: dev_lowlevel.c  dev_lowlevel.h  usbd.h
rom/usb/: dev_lowlevel.c  dev_lowlevel.h  usb_common.h
rom/usb/hardware/: address_mapped.h
rom/usb/hardware/structs/: usb.h
test-rom/: Makefile  main.c  n64cart.c  n64cart.h
test-rom/ext/: cic.c
test-rom/jpeg/: gba-jpeg-decode.c  gba-jpeg-decode.h  gba-jpeg.h
usb/: dev_lowlevel.c
utils/: Makefile  crc32.c  proxy-romfs.c  romfs-proxy.c  romfs-proxy.h  usb-romfs-proxy.c  usb-romfs-proxy.h  usb-romfs.c  usb-uploader.c  utils.h  utils2.h
utils/libusb-1.0.26/: Makefile.in  aclocal.m4  config.h.in  configure
utils/libusb-1.0.26/examples/: Makefile.in
utils/libusb-1.0.26/libusb/: Makefile.in
utils/libusb-1.0.26/libusb/.deps/: libusb-1.0.Plo
utils/libusb-1.0.26/tests/: Makefile.in
utils/romfs-gui/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  remotetransport.cpp  remotetransport.h  resources.qrc  romfsbridge.cpp  romfsbridge.h  romfsdevice.cpp  romfsdevice.h  romfsiconview.cpp  romfsiconview.h  romfsmodel.cpp  romfsmodel.h  romfstransport.h  romfsview.cpp  romfsview.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  usbtransport.cpp  usbtransport.h
utils/romfs-gui/icons/: icon.icns
utils/romfs-gui/translations/: romfs-gui_en.ts  romfs-gui_ru.ts
utils/simple-connection-lib/: LICENSE  Makefile.am  configure.ac  simple-connection.pc.in
utils/simple-connection-lib/src/: Makefile.am  base64.c  base64.h  getrandom.c  getrandom.h  tcp.c  tcp.h  udp.c  udp.h
utils/simple-connection-lib/test/: Makefile.am  tcpclient-ws.c  tcpclient.c  tcpserver-ws.c  tcpserver.c  tcpsslclient-ws.c  tcpsslclient.c  tcpsslserver-ws.c  tcpsslserver-ws.html  tcpsslserver.c  udpchat.c  udpclient.c  udpserver.c
utils/simple-connection-lib/test/cert/: gencert.sh
